# parquet-analyzer

./: README.md  TODO.md  parquet-inspector.py  pyproject.toml  release.sh  requirements.txt
examples/: example.json  generate_example.py
src/parquet/: ttypes.py
src/parquet_analyzer/: __init__.py  _core.py  _html.py  app.py  cli.py
src/parquet_analyzer/templates/: base.html  report.html  script.js  select.html  style.css  viewer.html
src/parquet_analyzer/templates/sections/: columns.html  key-value-metadata.html  row-groups.html  schema.html  segments.html  summary.html
src/parquet_inspector/: __init__.py  __main__.py  cli.py
tests/: test_cli.py  test_core.py  test_html.py  test_integration.py
